updated header component, fixed overflow x due to lang picker absolute position

--- a/src/app/shared/translation/lang-picker/lang-picker.component.scss
+++ b/src/app/shared/translation/lang-picker/lang-picker.component.scss
@@ -46,7 +46,7 @@
 .available-languages {
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   background-color: var(--color-container-bg);
   border: 1px solid var(--color-border-light);
   border-radius: 5px;
